# raspal

./: .dockerignore  AGENTS.md  CHANGELOG.md  Dockerfile  KNOWN_ISSUES.md  PUBLIC_API.md  README.md  ROADMAP.md  check_legal.py  check_legal2.py  check_prohibited.py  check_tos_scraping.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  scrape_datascope.py  test_talent.py  transform_datascope.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docker-publish.yml
data/: talent_spain_salaries.csv  talent_spain_salaries.json
docker/: README.md  entrypoint.sh  healthcheck.sh  ollama-init.sh
docs/: docker-hub-publish.md  legal-and-ethics.md  quickstart-docker.md  reddit-post.md
examples/: README.md  ecommerce-products.yaml  news-article.yaml  real-estate-listings.yaml
src/raspal/: __init__.py  cli.py  compliance.py  fetcher.py  llm.py  models.py  router.py
